@@ -919,7 +919,7 @@ class Query(object):
         adapt_criterion = self.table not in self._get_joinable_tables()
 
         if not adapt_criterion and whereclause is not None and (self.mapper is not self.select_mapper):
-            whereclause = sql_util.ClauseAdapter(from_obj).traverse(whereclause, stop_on=util.Set([from_obj]))
+            whereclause = sql_util.ClauseAdapter(from_obj).traverse(whereclause)
 
         # TODO: mappers added via add_entity(), adapt their queries also, 
         # if those mappers are polymorphic
